--- a/css/styles.css
+++ b/css/styles.css
@@ -4,58 +4,57 @@
 
 .nav-main {
   position: fixed;
-  z-index: 10;
+  z-index: 11;
   top: 0;
   left: 0;
   width: 100%;
 }
 
-.nav-menu-btn {
-  color: #f6f6f6;
-  height: 55px;
-  padding: 18px 20px 0 20px;
-  text-transform: uppercase;
+.nav-menu-btn,
+.nav-menu a {
   font-size: 16px;
   font-family: "Raleway", sans-serif;
-  transition: all 50ms linear;
-  display: inline-block;
   text-decoration: none;
+  text-transform: uppercase;
+  transition: all 50ms linear;
+}
+
+.nav-menu-btn {
+  display: inline-block;
+  height: 55px;
+  padding: 18px 20px 0 20px;
+  color: #f6f6f6;
 }
 .nav-menu-btn:hover,
 .nav-menu-btn:focus,
 .nav-menu-btn:active,
 .nav-menu-btn.active {
-  background-color: #f8f8f8;
+  background: #f8f8f8;
   color: #19c1f0;
 }
 
 .nav-menu {
-  margin: 0;
-  padding: 0;
   position: relative;
   display: none;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-menu a {
+  display: block;
   width: 200px;
   height: 50px;
   padding: 15px 20px 0 20px;
-  text-transform: uppercase;
-  font-size: 16px;
-  font-family: "Raleway", sans-serif;
-  transition: all 50ms linear;
-  display: block;
-  text-decoration: none;
-  background-color: #f8f8f8;
-  color: #19c1f0;
   border-right: 4px solid #e0e0e0;
+  background: #f8f8f8;
+  color: #19c1f0;
 }
 .nav-menu a:hover,
 .nav-menu a:focus,
 .nav-menu a:active {
-  background-color: #19c1f0;
-  color: #f8f8f8;
   border-right: 4px solid #159abf;
+  background: #19c1f0;
+  color: #f8f8f8;
 }
 
 
@@ -66,40 +65,29 @@
   }
 
   .nav-menu {
-/*    margin: 0;
-    padding: 0;*/
     display: inline-block;
     width: 100%;
   }
 
   .nav-menu li {
     display: inline-block;
-    margin: 5px 5px 0 5px;
     width: auto;
+    margin: 5px 5px 0 5px;
   }
 
   .nav-menu a {
     width: auto;
+    border-right: none;
     background: transparent;
     color: #fff;
-    border-right: none;
-    /*color: #fff;*/
-    /*display: inline-block;*/
-    /*height: 50px;
-    padding: 15px 20px 0 20px;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-family: "Raleway", sans-serif;
-    transition: all 50ms linear;*/
   }
-
   .nav-menu a:hover,
   .nav-menu a:focus,
   .nav-menu a:active,
   .nav-menu a.active {
-    background-color: #fff;
-    color: #19c1f0;
     border-right: none;
+    background: #fff;
+    color: #19c1f0;
   }
 
   .nav-menu .language {
@@ -122,17 +110,15 @@
 }
 
 
-
-
+/***** HEADER *****/
 
 .header {
-  top: 0;
-  height: 450px;
-  padding: 0;
-  width: 100%;
-  overflow: hidden;
-  z-index: 1;
   position: fixed;
+  z-index: 10;
+  top: 0;
+  width: 100%;
+  height: 450px;
+  overflow: hidden;
   background: #05bffc; /* Old Browsers */
   background: -webkit-linear-gradient(bottom left,#05bffc,#efd662); /*Safari 5.1-6*/
   background: -o-linear-gradient(bottom left,#05bffc,#efd662); /*Opera 11.1-12*/
@@ -141,13 +127,13 @@
 }
 
 .header-title {
-  transform: rotate(-7deg);
   position: absolute;
+  transform: rotate(-7deg);
   width: 107%;
-  left: -1.5%;
-  bottom: -120px;
-  background: #fff;
   height: 240px;
+  bottom: -120px;
+  left: -1.5%;
+  background: #fff;
 }
 
 .header-title h1 {
@@ -155,17 +141,28 @@
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   letter-spacing: -1px;
-  font-size: 80px;
+  font-size: 50px;
   position: relative;
-  top: -72px;
+  top: -45px;
   text-align: center;
   margin: 0;
   white-space: nowrap;
 }
 
+@media screen and (min-width: 750px) {
+  .header-title {
+    left: -2.5%;
+  }
+
+  .header-title h1 {
+    font-size: 80px;
+    top: -72px;
+  }
+}
+
 @media screen and (min-width: 1120px) {
   .header-title {
-    left: -3.5%;
+    left: -2.5%;
   }
 
   .header-title h1 {
