--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@
   background: -moz-linear-gradient(bottom left,#05bffc,#efd662); /*Fx 3.6-15*/
   background: linear-gradient(bottom left, #05bffc, #efd662); /*Standard*/
   background: url('../fond.png') center center;
+  border-bottom: 3px solid #fff;
 }
 
 .header-title {
@@ -251,9 +252,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .cv-overview h1 {
-  margin-top: 0;
-  font-size: 48px;
+  margin: 0;
+  font-size: 75px;
 }
+.cv-overview h2 {
+  margin: -8px 0 40px 0;
+}
+
 .cv-overview p {
   margin: 1.3em 0;
 }
@@ -261,30 +266,36 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 18px;
 }
 .cv-overview-image {
-  width: 100%;
+  z-index: -1;
+  width: 130%;
+  position: absolute;
+  left: -176px;
+  top: -126px;
+}
+p.cv-overview-cta {
+  margin-top: 40px;
 }
 
-.cv-contact-cta {
-  border: 3px solid #05bffc;
-  padding: 15px;
-  border-radius: 5px;
-  text-align: center;
-}
-.cv-contact-cta :first-child {
-  margin-top: 0;
-}
-.cv-contact-cta :last-child {
-  margin-bottom: 0;
-}
 
 .cv-details {
-  background-image: url('../test3.jpg');
+  background-color: #79caaf;
+/*  background-color: #81CEAD;*/
+  color: #fff;
 }
+.cv-details h2 {
+  font-size: 60px;
+  margin: 0 0 20px 0;
+}
+.cv-details h4 {
+  font-size: 28px;
+  margin: 0 0 -2px 0;
+}
+
 .cv-details .row {
-  background: rgba(255, 255, 255, 0.5);
+/*  background: rgba(255, 255, 255, 0.5);
   padding: 25px;
   margin-left: 100px;
-  margin-right: 100px;
+  margin-right: 100px; */
 }
 .cv-details .cv-contact-cta {
   border: 0;
@@ -312,4 +323,19 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #79caaf;
   border-bottom: 5px solid #efd662;
 
+}
+
+
+
+.cv-contact-cta {
+  border: 3px solid #05bffc;
+  padding: 15px;
+  border-radius: 5px;
+  text-align: center;
+}
+.cv-contact-cta :first-child {
+  margin-top: 0;
+}
+.cv-contact-cta :last-child {
+  margin-bottom: 0;
 }
